made fixes per cin young's comments on github